Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15065

buffered write performance regression with PQ enabled

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      We found performance drop in a buffered write up to 15%-20% if compare with a baseline without PQ patches.

      In both cases quota was turned on (enabled="ugp") and set only one limit - block hard limit 500T. Also there was at least one OST pool without any quota limits.

      Note, this performance issue can't be seen if there is no OST pools in a system.

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: